1. extract SqlBasedQueryExecutionContext and SqlBasedDatasourceConnectionConfig for sql data sources 2. enable disable preparedStatement for all sql data soureces